# vmutils

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/: protect.hpp  protection.hpp  protection_guard.hpp  query.hpp  region.hpp  vmi.hpp  vmu.hpp
include/detail/: config.hpp
include/detail/linux/: query.inl
include/detail/osx/: query.inl
include/detail/posix/: basic_types.hpp  error.hpp  protect.inl  protect_memory.hpp  protection.inl
include/detail/windows/: basic_types.hpp  error.hpp  protect.inl  protect_memory.hpp  protection.inl  protection_at.hpp  query.inl  winapi.hpp
include/vmi/: protection.hpp  query.hpp  region.hpp
include/vmi/detail/: config.hpp
include/vmi/detail/osx/: query.inl
include/vmi/detail/windows/: definitions.hpp  error.hpp  protection.inl  query.inl  winapi.hpp
include/vmu/: address_concept.hpp  memory_iterator.hpp  protect.hpp  protection.hpp  protection_guard.hpp  query.hpp  query_iterator.hpp  region.hpp
include/vmu/detail/: address_cast.hpp  checked_pointers.hpp  error_handlers.hpp  native_handle.hpp  query_range_using_query.inl  uintptr_cast.hpp
include/vmu/detail/linux/: query.inl
include/vmu/detail/osx/: query.inl
include/vmu/detail/posix/: error.hpp  protect.inl  protection.inl
include/vmu/detail/windows/: definitions.hpp  protect.inl  protection.inl  query.inl
test/: CMakeLists.txt  main.cpp
